added Pause animation